--- a/SuicaReader/Info.plist
+++ b/SuicaReader/Info.plist
@@ -56,5 +56,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>com.apple.developer.nfc.readersession.iso7816.select-identifiers</key>
+	<array>
+		<string>0003</string>
+	</array>
+	<key>NFCReaderUsageDescription</key>
+	<string>hogehogehogeohge</string>
 </dict>
 </plist>
