--- a/SuicaReader/Info.plist
+++ b/SuicaReader/Info.plist
@@ -20,6 +20,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NFCReaderUsageDescription</key>
+	<string>hogehogeghoge</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -59,8 +61,7 @@
 	<key>com.apple.developer.nfc.readersession.iso7816.select-identifiers</key>
 	<array>
 		<string>0003</string>
+		<string>FE00</string>
 	</array>
-	<key>NFCReaderUsageDescription</key>
-	<string>hogehogehogeohge</string>
 </dict>
 </plist>
